--- a/css/main.css
+++ b/css/main.css
@@ -75,3 +75,47 @@
     background-color: #ff7373;
     color:#fff;
   }
+
+.button.button-xl, button.button-xl {
+  font-size: 1.5rem;
+  height: 3.25rem;
+  line-height: calc(3.25rem - 2px);
+  margin: 5px 0;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: inherit;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  background-color: #0074d9;
+  border-radius: .25rem;
+  border: 1px solid #0074d9;
+  border-top-color: #1982dd;
+  border-bottom-color: #0068c3;
+  height: 2.25rem;
+  line-height: calc(2.25rem - 2px);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  padding: 0 .75em;
+  cursor: pointer;
+  display: inline-block;
+  -webkit-transition: all .1s;
+  transition: all .1s;
+  -webkit-appearance: button;
+
+}
+
+.button.button-xl.disabled, .butto.button-xl:disabled, button.button-xl.disabled, button.button-xl:disabled {
+  background-color: #0068c3;
+  border-top-color: #1982dd;
+  border-bottom-color: #0068c3;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  text-decoration: none;
+  opacity: .5;
+  cursor: not-allowed;
+}
